half way desktop

--- a/index.html
+++ b/index.html
@@ -36,44 +36,46 @@
 
             </div>
         </section>
-        <section>
+        <section class="">
             <div id="img-information">
                 <figure>
                     <img src="./resourse/images/information-main.jpg" alt="">
                     <figcaption></figcaption>
                 </figure>
-                <h2>It doesn't hurt to keep practicing</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Emanuel, Sr Strategist at Hiring.com</p>
+                <div id="img-info">
+                    <h2>It doesn't hurt to keep practicing</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p id="adress">Emanuel, Sr Strategist at Hiring.com</p>
+                </div>
+                
             </div>
             <div id="side-information">
                 <div id="side-info">
-                    <figure>
+                    <figure id="side-info-img">
                         <img src="./resourse/images/information-orientation.jpg" alt="">
                     </figure>
-                    <div>
+                    <div id="info-text">
                         <h3>Orientation date</h3>
                         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                         <a href="#">Read More</a>
                     </div>
-                    
                 </div>
                 <div id="side-info"> 
-                    <figure>
+                    <figure id="side-info-img">
                         <img src="./resourse/images/information-campus.jpg" alt="">
                     </figure>
-                    <div>
+                    <div id="info-text">
                         <h3>Orientation date</h3>
                     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                     <a href="#">Read More</a>
                     </div>
                 </div>
-                    <div id="side-info">
-                        <figure>
+                    <div id="side-info" class="grey">
+                        <figure id="side-info-img">
                         <img src="./resourse/images/information-guest-lecture.jpg" alt="">
                     </figure>
-                    <div>
-                        <h3>Orientation date</h3>
+                    <div id="info-text" >
+                        <h3>Orientation dat</h3>
                     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                     <a href="#">Read More</a>
                     </div>
